--- a/source/index.html
+++ b/source/index.html
@@ -15,19 +15,19 @@
     </a>
     <img src="/source/img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
     <nav class="main-nav">
-      <button class="main_nav__toogle" type="button">
+      <button class="main-nav__toogle" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
       <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
-          <li class="site-nav__item site-list__item--current">
-            <a class="site-nav__link" href="index.html">Главная</a>
+        <ul class="main-nav__list">
+          <li class="main-nav__item main-nav__item--current">
+            <a class="main-nav__link" href="index.html">Главная</a>
           </li>
-          <li class="site-nav__item">
-            <a class="site-nav__link" href="index.html">Каталог продукции</a>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="index.html">Каталог продукции</a>
           </li>
-          <li class="site-nav__item">
-            <a class="site-nav__link" href="index.html">Подбор программы</a>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="index.html">Подбор программы</a>
           </li>
         </ul>
       </div>
@@ -35,51 +35,51 @@
   </header>
   <main class="main-container">
     <section class="main-intro">
-      <h1 class="main__title">Функциональное питание для котов</h1>
-      <p class="main_intro__text">Занялся собой? Займист котом!</p>
+      <h1 class="main-intro__title">Функциональное питание для котов</h1>
+      <p class="main-intro__description">Занялся собой? Займист котом!</p>
       <img class="main-intro__img" src="/source/img/index-can-mobile.png" alt="Банка с едой для котов">
       <a class="button main-intro__button" href="form.html">Подбор программы</a>
     </section>
     <section class="programs">
-      <h2 class="section__title visually-hidden">Программы питания</h2>
-      <div class="program-slim">
-        <h3 class="program__title">Похудение</h3>
-        <p class="program__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
+      <h2 class="visually-hidden">Программы питания</h2>
+      <div class="programs-slim">
+        <h3 class="programs__title">Похудение</h3>
+        <p class="programs__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям?
           Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-        <a class="program__link" href="catalog.html">Каталог slim</a>
+        <a class="programs__link" href="catalog.html">Каталог slim</a>
       </div>
       <div class="program-pro">
-        <h3 class="program__title">Набор массы</h3>
-        <p class="program__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
+        <h3 class="programs__title">Набор массы</h3>
+        <p class="programs__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
           поможет вашему коту нарастить необходимые мышцы!</p>
-        <a class="program__link" href="catalog.html">Каталог slim</a>
+        <a class="programs__link" href="catalog.html">Каталог slim</a>
       </div>
     </section>
     <section class="advantages">
-      <h2 class="section__title">Как это работает</h2>
-      <ul class="advantage__list">
-        <li class="advantage__item advantage__item--nutrients">
-          <p class="advantage__description">Функциональное питание
+      <h2 class="advantages__title">Как это работает</h2>
+      <ul class="advantages__list">
+        <li class="advantages__item advantages__item--nutrients">
+          <p class="advantages__description">Функциональное питание
             содержит только полезные
             питательные вещества.</p>
         </li>
-        <li class="advantage__item advantage__item--consistency">
-          <p class="advantage__description">Выпускается в виде порошка,
+        <li class="advantages__item advantages__item--consistency">
+          <p class="advantages__description">Выпускается в виде порошка,
             который нужно лишь залить
             кипятком и готово.</p>
         </li>
-        <li class="advantage_item">
-          <p class="advantage__description advantage__item--meal">Замените один-два приема
+        <li class="advantages__item advantages__item--meal">
+          <p class="advantages__description advantages__item-meal">Замените один-два приема
             обычной еды на наше
             функциональное питание.</p>
         </li>
-        <li class="advantage__item advantage__item--duration">
-          <p class="advantage__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+        <li class="advantages__item advantages__item-duration">
+          <p class="advantages__description">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
         </li>
       </ul>
     </section>
     <section class="example">
-      <h2 class="section__title">Живой пример</h2>
+      <h2 class="example__title">Живой пример</h2>
       <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
         Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов
         в день. </p>
@@ -95,24 +95,24 @@
       </div>
       <p class="spent-amount">Затраты на питание: 15 000 руб.</p>
       <div class="example__compare-slider">
-        <img class="compare__img" src="/source/img/viewport=mobile.png" alt="">
+        <img class="example__img" src="/source/img/viewport=mobile.png" alt="">
       </div>
     </section>
     <section class="partnership">
-      <h2 class="section__title section__title--small-size">Приглашаем к сотрудничеству дилеров!</h2>
-      <p class="adress__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
-      <img class="adress__img" src="/source/img/partnership-map-img.png" width="320" height="362" alt="Мы на ходимся здесь: ул. Большая
+      <h2 class="partnership__title partnership__title--small">Приглашаем к сотрудничеству дилеров!</h2>
+      <p class="partnership__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <img class="partnership__adress-img" src="/source/img/partnership-map-img.png" width="320" height="362" alt="Мы на ходимся здесь: ул. Большая
       Конюшенная, д. 19/8
       Санкт-Петербург">
     </section>
   </main>
   <footer class="page-footer">
-    <ul class="footer-socials__list">
-      <li class="footer-socials__item">
+    <ul class="page-footer__list">
+      <li class="page-footer__item">
         <img src="/source/img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
       </li>
-      <li class="footer-socials__item">
-        <a class="footer-socials__link" href="https://vk.com/htmlacademy">
+      <li class="page-footer__item">
+        <a class="page-footer__link" href="https://vk.com/htmlacademy">
           <span class="visually-hidden">Вконтакте</span>
           <svg width="27" height="17" viewBox="0 0 27 17" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -120,8 +120,7 @@
               fill="#666666" />
           </svg>
         </a>
-
-        <a class="footer-socials__link" href="https://www.youtube.com/user/htmlacademyru">
+        <a class="page-footer__link" href="https://www.youtube.com/user/htmlacademyru">
           <span class="visually-hidden">Ютуб</span>
           <svg width="24" height="19" viewBox="0 0 24 19" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
@@ -129,8 +128,7 @@
               fill="#666666" />
           </svg>
         </a>
-
-        <a class="footer-socials__link" href="https://telegram.me/htmlacademy">
+        <a class="page-footer__link" href="https://telegram.me/htmlacademy">
           <span class="visually-hidden">Телеграм</span>
           <svg width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd"
@@ -139,7 +137,7 @@
           </svg>
         </a>
       </li>
-      <li class="footer-socials__item">
+      <li class="page-footer__item">
         <a href="https://htmlacademy.ru/">HTML Academy</a>
         <a href="https://htmlacademy.ru/">
           <svg width="27" height="34" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg">
