--- a/source/index.html
+++ b/source/index.html
@@ -14,10 +14,10 @@
         alt="Логотип компании Cat energy">
     </a>
     <img src="/source/img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
+    <button class="main-header__nav-toogle" type="button">
+      <span class="visually-hidden">Открыть меню</span>
+    </button>
     <nav class="main-nav">
-      <button class="main-nav__toogle" type="button">
-        <span class="visually-hidden">Открыть меню</span>
-      </button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav__item--current">
